# bookdev

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.frontend  Dockerfile.temporal  Dockerfile.worker  README.md  SPEC.md  alembic.ini  analyze_coverage.py  cli.py  conftest.py  coverage.json  coverage_detail.json  docker-compose.dev.yml  docker-compose.prod.yml  playwright.config.ts  prometheus.yml  pyproject.toml  requirements.txt  web-snapshot.md
.github/workflows/: ci.yml
config/: prometheus.yml
config/grafana-dashboards/: dashboard.yml
config/grafana-datasources/: prometheus.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
nginx/: frontend.conf  nginx.conf
nginx/conf.d/: api.conf
scripts/: deploy.sh  healthcheck.sh  migrate.sh  start.sh
src/: main.py
src/api/: __init__.py  deps.py  router.py  test_api_deps.py  test_routes_admin.py  test_routes_auth.py  test_routes_chapters.py  test_routes_knowledge_graph.py  test_routes_projects.py  test_routes_terms.py  websocket.py
src/db/: __init__.py
src/e2e/: test_full_pipeline.py  test_integration.py  test_pipeline_coverage.py
src/f00_kafka_eventbus/: __init__.py  consumer.py  dlq_handler.py  docker-compose.kafka.yml  event_bus.py  event_bus.py.bak  event_definitions.py  mock_bus.py  producer.py  real_consumer.py  real_producer.py  test_event_bus.py  test_real_producer.py  topic_manager.py
src/f01_immutable_log/: __init__.py  immutable_log.py  test_immutable_log.py
src/f02_context_budget/: __init__.py  context_budget_manager.py  test_context_budget_manager.py
src/f03_content_addressing/: __init__.py  content_addressing.py  test_content_addressing.py
src/f04_temporal_workflow/: Dockerfile.worker  __init__.py  docker-compose.yml  test_unit_workflows.py  test_workflows.py
src/f05_knowledge_graph/: __init__.py  edges.py  knowledge_graph.py  nodes.py  pg_graph_adapter.py  query_engine.py  test_knowledge_graph.py  test_pg_graph_adapter.py  test_query_engine.py
src/f06_tier1_verification/: __init__.py  data_lineage_tracker.py  test_tier1_verification.py  tier1_engine.py
src/f07_doi_verification/: __init__.py  crossref_client.py  doi_verifier.py  test_doi_verification.py
src/f19_logic_chain/: __init__.py  (+4 more)
web_app/: api.py  index.html
设计文档/: P0漏洞修复方案-技术规格说明书.md  Phase-0-POC-Temporal-Kafka.md  SKILL.md  TDD开发计划v1.0.md  专家讨论-出版规范.md  专家讨论-成本架构.md  专家讨论-知识图谱.md  专家讨论-系统架构.md  专家评审-AI工程.md  专家评审-出版行业.md  专家评审-系统工程.md  专家评审-项目管理.md  安全架构设计.md  完整架构设计文档v3.0.md  实施计划v2.0.md  技术调研-上下文管理.md  技术调研-合规知识.md  技术调研-幻觉检测.md  技术调研-文档生成.md  架构设计文档v2.0.md  测试体系设计.md  红队审查-穷举漏洞.md
(+244 files in other folders)
